test/mir/statements/expression.exp
Error: Could not resolve name `testExpressionStatementIfValue` to value
test/mir/statements/expression.myte:92:6-36
 92 |   use(testExpressionStatementIfValue);
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^